fix : 코드수정(ai 리뷰 반영)
- Dto : Collections.toList() -> .toList()
- brandRepository : 주석 추가